[gd_scene load_steps=20 format=3 uid="uid://0v4n8vo1syn1"]

[ext_resource type="Script" uid="uid://dmfijxuhglbit" path="res://Scripts/enemy_penguin.gd" id="1_3dhal"]
[ext_resource type="PackedScene" uid="uid://bb2m71na1808" path="res://Scenes/killzone.tscn" id="2_3dhal"]
[ext_resource type="Texture2D" uid="uid://btshnqlamn6ft" path="res://Art/Penguin/Hat Penguin/Hat Peng Death.png" id="2_t7x84"]
[ext_resource type="Texture2D" uid="uid://0lcwy8743h1o" path="res://Art/Penguin/Hat Penguin/Hat Peng Walking.png" id="3_x2evb"]
[ext_resource type="Script" uid="uid://dad8r1n6qq6r5" path="res://Scenes/hitbox.gd" id="4_v8y5j"]
[ext_resource type="AudioStream" uid="uid://6m1b3pd51jjh" path="res://audio/sfx/jared_penguindeath1.wav" id="5_t7x84"]
[ext_resource type="AudioStream" uid="uid://b6r7v5rwuk3f4" path="res://audio/sfx/jared_penguindeath2.wav" id="6_x2evb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2m5ls"]
atlas = ExtResource("2_t7x84")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_anqyj"]
atlas = ExtResource("2_t7x84")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc8td"]
atlas = ExtResource("2_t7x84")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l4i1"]
atlas = ExtResource("2_t7x84")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqxrg"]
atlas = ExtResource("3_x2evb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txf6a"]
atlas = ExtResource("3_x2evb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1xhe"]
atlas = ExtResource("3_x2evb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dw8y"]
atlas = ExtResource("3_x2evb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2evb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m5ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anqyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc8td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l4i1")
}],
"loop": false,
"name": &"Peng_death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqxrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txf6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1xhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dw8y")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2m5ls"]
streams_count = 2
stream_0/stream = ExtResource("5_t7x84")
stream_1/stream = ExtResource("6_x2evb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dhal"]
size = Vector2(26, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m5ls"]
size = Vector2(20, 26)

[node name="Enemy Penguin" type="Node2D"]
script = ExtResource("1_3dhal")

[node name="Enemy_sprite" type="AnimatedSprite2D" parent="." groups=["enemy", "enemy_hitbox"]]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_x2evb")
animation = &"Peng_death"
autoplay = "Walking"

[node name="Hitbox" type="Area2D" parent="Enemy_sprite" groups=["enemy", "enemy_hitbox"]]
position = Vector2(0, 16)
collision_layer = 4
collision_mask = 4
script = ExtResource("4_v8y5j")
penguin_death = SubResource("AudioStreamRandomizer_2m5ls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_sprite/Hitbox"]
position = Vector2(1, -17)
shape = SubResource("RectangleShape2D_3dhal")

[node name="Killzone" parent="Enemy_sprite" groups=["enemy", "enemy_hitbox"] instance=ExtResource("2_3dhal")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_sprite/Killzone"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_2m5ls")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 4)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(1, -13)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(1, -13)
target_position = Vector2(-10, 0)

[connection signal="body_entered" from="Enemy_sprite/Hitbox" to="Enemy_sprite/Hitbox" method="_on_body_entered"]
